--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <section class="banner">
-            <h1 class="banner-heading2 banner-txt">Cool Dark UI Template for Webflow Agencies!</h1>
+            <h1 class="banner-heading2">Cool Dark UI Template for Webflow Agencies!</h1>
             <h2 class="logo">Logo</h2>
             <button class="Button1">Sign Up</button>
             <button class="Button2">Stay Focused</button>
-            <img class="bgimg" src="images/Hero-bg.png" alt="">
+            <img class="bg-img" src="images/Hero-bg.png" alt="">
 
         </section>
     </header>
@@ -97,21 +97,37 @@
 
 
 
-    */ <h3 class="get-in">Let's Get in Touch </h3> */
+     <div class="contact-section">
+    <div class="text-content">
+      <h1>Let's Get in<br>Touch</h1>
+    </div>
+    <div class="form-container">
+      <form action="#">
+        <label for="email">Email</label>
+        <input type="email" id="email" placeholder="example@email.com" required>
 
+        <label for="name">Name</label>
+        <input type="text" id="name" placeholder="full name" required>
 
-    <footer>
+        <label for="message">Message</label>
+        <textarea id="message" placeholder="write your message...." required></textarea>
 
-        
-    </footer>
+        <button type="submit">Get in Touch</button>
+      </form>
+    </div>
+  </div>
 
+  <footer class="footer"> 
+    <div class="heading"> <H1>LOGO</H1>
+    </div>
+    <p class="last-txt">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life. </p>
+    <div class="last-line">
+        <div>Home</div>
+        <div>About</div>
+        <div>How it Works </div>
+        <div>Services</div>
+</div>
 
-
-
-
-
-
-  
-    
+</footer>
 </body>
 </html>
